--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@ const modalData = {
   work: {
     title: '服務內容',
     content: '・塑膠色粉調色  ・Pantone 色號比對  ・客製化顏色研發  ・技術諮詢與色彩管理'
+    img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/modalData.work.img.jpg'
   },
   about: {
     title: '產品介紹',
