--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ nav ul.t-nav li a:hover {
 }
 
 /* 下方四個按鈕 */
+/* 下方四個按鈕 */
 .bottom-buttons {
   width: 60%; /* 與 T 字導覽列同寬 */
   margin: 30px auto; /* 置中 */
