--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 <!-- 官方 Dimension CSS -->
 <link rel="stylesheet" href="https://html5up.net/uploads/demos/dimension/assets/css/main.css" />
-
+  
+</style>
   .inner {
     width: 100%;
     max-width: 55rem !important; /* 官方寬度 */
